--- a/vistas/login/Alumnos/login-alumnos.html
+++ b/vistas/login/Alumnos/login-alumnos.html
@@ -38,7 +38,7 @@
                     <h2>Contraseña</h2>
                     <input type="password" name="contraseña" placeholder="*************" required>
                     <input type="submit" value="Ingresar">
-                    <p><a href="#">¿Olvidaste tu contraseña?</a></p>
+                    <p><a href="../../resetar-password/resetear-password.html">¿Olvidaste tu contraseña?</a></p>
                 </form>
             </div>
         </div>
