--- a/vistas/resetar-password/resetear-password.html
+++ b/vistas/resetar-password/resetear-password.html
@@ -13,7 +13,7 @@
 <body>
     <header class="header">
         <div class="menu container">
-            <a href="https://www.unfv.edu.pe/" target="_blank" class="logo"><img src="../../../img/universidad/Escudo_UNFV.png" alt=""></a>
+            <a href="https://www.unfv.edu.pe/" target="_blank" class="logo"><img src="../../img/universidad/Escudo_UNFV.png" alt=""></a>
             <nav class="navbar">
                 <ul>
                     <li><a id="inicio" href="../../../index.html">Volver</a></li>
