--- a/vistas/resetar-password/resetear-password.html
+++ b/vistas/resetar-password/resetear-password.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Docentes</title>
-    <link rel="shortcut icon" href="../../../img/universidad/UNFV_ico.png" type="image/x-icon">
+    <title>Reestablecer Contraseña</title>
+    <link rel="shortcut icon" href="../../img/universidad/UNFV_ico.png" type="image/x-icon">
     <link rel="stylesheet" href="./resetear-password.css">
 
 </head>
