--- a/vistas/resetar-password/resetear-password.html
+++ b/vistas/resetar-password/resetear-password.html
@@ -13,12 +13,12 @@
 <body>
     <header class="header">
         <div class="menu container">
-            <a href="https://www.unfv.edu.pe/" target="_blank" class="logo"><img src="/img/universidad/Escudo_UNFV.png" alt=""></a>
+            <a href="https://www.unfv.edu.pe/" target="_blank" class="logo"><img src="../../img/universidad/Escudo_UNFV.png" alt=""></a>
             <nav class="navbar">
                 <ul>
-                    <li><a id="inicio" href="../../../index.html">Volver</a></li>
-                    <li><a id="alumno" href="../Alumnos/login-alumnos.html">Alumnos</a></li>
-                    <li><a id="docente" href="./login-docentes.html">Docentes</a></li>
+                    <li><a id="inicio" href="/index.html">Volver</a></li>
+                    <!--<li><a id="alumno" href="/vistas/login/Alumnos/login-alumnos.html">Alumnos</a></li>-->
+                    <!--<li><a id="docente" href="/vistas/login/Docentes/login-docentes.html">Docentes</a></li>-->
                     <li><a href="https://www.unfv.edu.pe/oficinas/secretaria-general/estructura-organizativa/content/contactanos-du#:~:text=Central%20telef%C3%B3nica%3A%20(01)%20748,a%201.00%20pm." target="_blank">Ayuda</a></li>
                 </ul>
             </nav>
