--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
             <a href="https://www.unfv.edu.pe/" target="_blank" class="logo"><img src="./img/universidad/Escudo_UNFV.png" alt=""></a>
             <nav class="navbar">
                 <ul>
-                    <li><a id="alumnos" href="./vistas/login/Alumnos/login-alumnos.html">Alumnos</a></li>
-                    <li><a id="docentes" href="./vistas/login/Docentes/login-docentes.html">Docentes</a></li>
+                    <li><a id="login" href="./vistas/login/login.html">Login</a></li>
                     <li><a id="Ayuda"
                             href="https://www.unfv.edu.pe/oficinas/secretaria-general/estructura-organizativa/content/contactanos-du#:~:text=Central%20telef%C3%B3nica%3A%20(01)%20748,a%201.00%20pm."
                             target="_blank">Ayuda</a></li>
