--- a/vistas/dashboard/docentes/dashboard-docentes.html
+++ b/vistas/dashboard/docentes/dashboard-docentes.html
@@ -20,9 +20,9 @@
             <i class="bx bx-menu" id="btn"></i>
         </div>
         <div class="user">
-            <i class='bx bx-user-circle' id="user-img"></i>
+            <img src="../../../img/universidad/Docente/FotoPerfil.jpg" alt="docente" class="user-img">
             <div>
-                <p class="bold">Dante Iñigo</p>
+                <p class="bold">Docente</p>
             </div>
         </div>
         <ul>
@@ -48,7 +48,7 @@
                 <span class="tooltip">Ajustes</span>
             </li>
             <li>
-                <a href="#">
+                <a href="../../../index.html">
                     <i class="bx bx-log-out"></i>
                     <span class="nav-item">Logout</span>
                 </a>
