--- a/vistas/login/login.html
+++ b/vistas/login/login.html
@@ -17,7 +17,7 @@
                     src="../../../img/universidad/Escudo_UNFV.png" alt=""></a>
             <nav class="navbar">
                 <ul>
-                    <li><a id="inicio" href="../../../index.html">Regresar</a></li>
+                    <li><a id="inicio" href="../../index.html">Regresar</a></li>
                     <li><a href="https://www.unfv.edu.pe/oficinas/secretaria-general/estructura-organizativa/content/contactanos-du#:~:text=Central%20telef%C3%B3nica%3A%20(01)%20748,a%201.00%20pm."
                             target="_blank">Ayuda</a></li>
                 </ul>
