--- a/vistas/login/login.html
+++ b/vistas/login/login.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    <link rel="shortcut icon" href="../../../img/universidad/UNFV_ico.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../../img/universidad/UNFV_ico.png" type="image/x-icon">
     <link rel="stylesheet" href="./login.css">
 
 </head>
@@ -14,7 +14,7 @@
     <header class="header">
         <div class="menu container">
             <a href="https://www.unfv.edu.pe/" target="_blank" class="logo"><img
-                    src="../../../img/universidad/Escudo_UNFV.png" alt=""></a>
+                    src="../../img/universidad/Escudo_UNFV.png" alt=""></a>
             <nav class="navbar">
                 <ul>
                     <li><a id="inicio" href="../../index.html">Regresar</a></li>
