--- a/vistas/portal/docentes/principal-docentes.html
+++ b/vistas/portal/docentes/principal-docentes.html
@@ -7,7 +7,7 @@
     <title>Universidad Nacional Federico Villarreal | Docentes</title>
     <link rel="shortcut icon" href="../../../img/universidad/UNFV_ico.png" type="image/x-icon">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <link rel="stylesheet" href="dashboard-docentes.css">
+    <link rel="stylesheet" href="principal-docentes.css">
 </head>
 
 <body>
