--- a/vistas/portal/docente/cursos/cursos-docentes.html
+++ b/vistas/portal/docente/cursos/cursos-docentes.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Universidad Nacional Federico Villarreal | Docentes</title>
-    <link rel="shortcut icon" href="../../../img/universidad/UNFV_ico.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../../../../img/universidad/UNFV_ico.png" type="image/x-icon">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <link rel="stylesheet" href="principal-docentes.css">
+    <link rel="stylesheet" href="cursos-docentes.css">
 </head>
 
 <body>
@@ -20,7 +20,7 @@
             <i class="bx bx-menu" id="btn"></i>
         </div>
         <div class="user">
-            <img src="../../../img/universidad/Docente/FotoPerfil.jpg" alt="docente" class="user-img">
+            <img src="../../../../img/universidad/Docente/FotoPerfil.jpg" alt="docente" class="user-img">
             <div>
                 <p class="bold">Docente</p>
             </div>
@@ -48,7 +48,7 @@
                 <span class="tooltip">Ajustes</span>
             </li>
             <li>
-                <a href="../../../index.html">
+                <a href="../../../../index.html">
                     <i class="bx bx-log-out"></i>
                     <span class="nav-item">Logout</span>
                 </a>
