--- a/vistas/portal/docente/cursos/cursos-docentes.html
+++ b/vistas/portal/docente/cursos/cursos-docentes.html
@@ -26,13 +26,13 @@
             </div>
         </div>
         <ul>
-            <li>
+            <!-- <li>
                 <a href="#">
                     <i class="bx bxs-grid-alt"></i>
                     <span class="nav-item">Dashboard</span>
                 </a>
                 <span class="tooltip">Dashboard</span>
-            </li>
+            </li> -->
             <li>
                 <a href="#">
                     <i class='bx bx-book'></i>
@@ -60,7 +60,7 @@
 
     <div class="main-content">
         <div class="container">
-            <h1>Panel Principal</h1>
+            <h1>Cursos</h1>
         </div>
     </div>
 </body>
@@ -69,9 +69,20 @@
     let btn = document.querySelector('#btn');
     let sidevar = document.querySelector('.sidevar');
 
-    btn.onclick = function(){
+    // Función para alternar la visibilidad del sidebar
+    btn.onclick = function () {
         sidevar.classList.toggle('active');
     }
+
+    // Función para cerrar el sidebar al hacer clic fuera de él
+    document.addEventListener('click', function (event) {
+        let isClickInsideSidebar = sidevar.contains(event.target);
+        let isClickInsideButton = btn.contains(event.target);
+
+        if (!isClickInsideSidebar && !isClickInsideButton) {
+            sidevar.classList.remove('active');
+        }
+    });
 </script>
 
 </html>
