--- a/vistas/portal/docente/ajustes/ajustes-docente.html
+++ b/vistas/portal/docente/ajustes/ajustes-docente.html
@@ -7,7 +7,7 @@
     <title>Universidad Nacional Federico Villarreal | Docentes</title>
     <link rel="shortcut icon" href="../../../../img/universidad/UNFV_ico.png" type="image/x-icon">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <link rel="stylesheet" href="cursos-docente.css">
+    <link rel="stylesheet" href="ajustes-docente.css">
 </head>
 
 <body>
@@ -35,15 +35,15 @@
                 <span class="tooltip">Dashboard</span>
             </li> -->
             <li>
-                <a href="./cursos-docente.html" class="curso">
+                <a href="../cursos/cursos-docente.html" class="curso">
                     <i class='bx bx-book curso'></i>
                     <span class="nav-item">Cursos</span>
                 </a>
                 <span class="tooltip">Cursos</span>
-            </li>            
+            </li>  
             <li>
-                <a href="../ajustes/ajustes-docente.html">
-                    <i class='bx bx-cog'></i>
+                <a href="./ajustes-docente.html" class="ajustes">
+                    <i class='bx bx-cog ajustes'></i>
                     <span class="nav-item">Ajustes</span>
                 </a>
                 <span class="tooltip">Ajustes</span>
@@ -61,7 +61,7 @@
 
     <div class="main-content">
         <div class="container">
-            <h1>Cursos</h1>
+            <h1>Ajustes</h1>
         </div>
     </div>
 </body>
