--- a/vistas/portal/docente/ajustes/ajustes-docente.html
+++ b/vistas/portal/docente/ajustes/ajustes-docente.html
@@ -61,7 +61,7 @@
 
     <div class="main-content">
         <div class="container">
-            <h1>Ajustes</h1>
+            <h1>AJUSTES</h1>
         </div>
     </div>
 </body>
