--- a/vistas/login/login.html
+++ b/vistas/login/login.html
@@ -13,8 +13,9 @@
 <body>
     <header class="header">
         <div class="menu container">
-            <a href="https://www.unfv.edu.pe/" target="_blank" class="logo"><img
-                    src="../../img/universidad/Escudo_UNFV.png" alt=""></a>
+            <a href="https://www.unfv.edu.pe/" target="_blank" class="logo">
+                <img src="../../img/universidad/Escudo_UNFV.png" alt=""
+            </a>
             <nav class="navbar">
                 <ul>
                     <li><a id="inicio" href="../../index.html">Regresar</a></li>
