--- a/vistas/portal/docente/ajustes/ajustes-docente.html
+++ b/vistas/portal/docente/ajustes/ajustes-docente.html
@@ -8,6 +8,7 @@
     <link rel="shortcut icon" href="../../../../img/universidad/UNFV_ico.png" type="image/x-icon">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="ajustes-docente.css">
+    <script type="module" src="ajuste-docente.js"></script>
 </head>
 
 <body>
@@ -40,7 +41,7 @@
                     <span class="nav-item">Cursos</span>
                 </a>
                 <span class="tooltip">Cursos</span>
-            </li>  
+            </li>
             <li>
                 <a href="./ajustes-docente.html" class="ajustes">
                     <i class='bx bx-cog ajustes'></i>
@@ -65,25 +66,5 @@
         </div>
     </div>
 </body>
-
-<script>
-    let btn = document.querySelector('#btn');
-    let sidevar = document.querySelector('.sidevar');
-
-    // Función para alternar la visibilidad del sidebar
-    btn.onclick = function () {
-        sidevar.classList.toggle('active');
-    }
-
-    // Función para cerrar el sidebar al hacer clic fuera de él
-    document.addEventListener('click', function (event) {
-        let isClickInsideSidebar = sidevar.contains(event.target);
-        let isClickInsideButton = btn.contains(event.target);
-
-        if (!isClickInsideSidebar && !isClickInsideButton) {
-            sidevar.classList.remove('active');
-        }
-    });
-</script>
 
 </html>
