--- a/vistas/login/login.html
+++ b/vistas/login/login.html
@@ -6,15 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
     <link rel="shortcut icon" href="../../img/universidad/UNFV_ico.png" type="image/x-icon">
-    <link rel="stylesheet" href="./login.css">
-
+    <link rel="stylesheet" href="login.css">
 </head>
 
 <body>
     <header class="header">
         <div class="menu container">
             <a href="https://www.unfv.edu.pe/" target="_blank" class="logo">
-                <img src="../../img/universidad/Escudo_UNFV.png" alt=""
+                <img src="../../img/universidad/Escudo_UNFV.png" alt="">
             </a>
             <nav class="navbar">
                 <ul>
@@ -34,12 +33,10 @@
                     <h2>Contraseña</h2>
                     <input type="password" name="contraseña" placeholder="*************" required>
                     <input type="submit" value="Ingresar">
-                    <p><a href="../resetar-password/resetear-password.html">¿Olvidaste tu contraseña?</a></p>
+                    <p><a href="../../resetar-password/resetear-password.html">¿Olvidaste tu contraseña?</a></p>
                 </form>
             </div>
         </div>
-
-
     </header>
 
     <footer>
