--- a/vistas/portal/docente/cursos/cursos-docente.html
+++ b/vistas/portal/docente/cursos/cursos-docente.html
@@ -62,7 +62,7 @@
 
     <div class="main-content">
         <div class="container">
-            <h1>CURSOS</h1>
+            <h1>PORTAL DOCENTES</h1>
         </div>
         <div class="formulario">
             <form id="cursoForm">
@@ -83,14 +83,13 @@
                 <div class="seccion">
                     <label for="seccion">Sección</label>
                     <select id="seccion" name="seccion">
-                        <option value="seccion0"></option>
+                        <!-- <option value="seccion0"></option>
                         <option value="seccion1">I12345</option>
                         <option value="seccion2">P54321</option>
                         <option value="seccion3">D98765</option>
                         <option value="seccion4">E24680</option>
                         <option value="seccion5">R13579</option>
-                        <option value="seccion6">S80246</option>
-                        <!-- Agrega más opciones según necesites -->
+                        <option value="seccion6">S80246</option> -->
                     </select>
                 </div>
             </form>
@@ -105,13 +104,13 @@
                     <button type="button">ASISTENCIA</button>
                 </div>
             </div>
-        </div>
-
-        <!-- <div class="imagen">
-            <img src="../../../../img/login/Docentes.jpg" alt="">
-        </div> -->
-        
+        </div>        
     </div>
+
+    <div class="imagen">
+        <img src="../../../../img/login/Docentes.jpg" alt="" id="docente">
+    </div>
+    
 </body>
 
 </html>
