--- a/vistas/login/login.html
+++ b/vistas/login/login.html
@@ -7,6 +7,7 @@
     <title>Login</title>
     <link rel="shortcut icon" href="../../img/universidad/UNFV_ico.png" type="image/x-icon">
     <link rel="stylesheet" href="login.css">
+    <script type="module" src="login.js"></script>
 </head>
 
 <body>
@@ -26,12 +27,12 @@
 
         <div class="container">
             <div class="form">
-                <form action="">
+                <form id="loginForm">
                     <h1>INICIAR SESIÓN</h1>
                     <h2>Correo</h2>
                     <input type="email" name="correo" id="correo" placeholder="usuario@unfv.edu.pe" required>
                     <h2>Contraseña</h2>
-                    <input type="password" name="contraseña" placeholder="*************" required>
+                    <input type="password" name="contraseña" id="contraseña" placeholder="*************" required>
                     <input type="submit" value="Ingresar">
                     <p><a href="../../resetar-password/resetear-password.html">¿Olvidaste tu contraseña?</a></p>
                 </form>
