Registro de Notas

--- a/vistas/portal/docente/cursos/cursos-docente.html
+++ b/vistas/portal/docente/cursos/cursos-docente.html
@@ -98,7 +98,7 @@
 
             <div class="footer">
                 <div class="notas">
-                    <button type="button">REGISTRO DE NOTAS</button>
+                    <button id="registroNotasBtn" type="button">REGISTRO DE NOTAS</button>
                 </div>
                 <div class="asistencia">
                     <button type="button">ASISTENCIA</button>
