--- a/vistas/login/login.html
+++ b/vistas/login/login.html
@@ -34,7 +34,7 @@
                     <h2>Contraseña</h2>
                     <input type="password" name="contraseña" id="contraseña" placeholder="*************" required>
                     <input type="submit" value="Ingresar">
-                    <p><a href="../../resetar-password/resetear-password.html">¿Olvidaste tu contraseña?</a></p>
+                    <p><a href="../resetar-password/resetear-password.html">¿Olvidaste tu contraseña?</a></p>
                 </form>
             </div>
         </div>
